# FairyChess

./: CMakeLists.txt  README.md  fairy_chess.cc
bit_storage/: bit_storage.h
board/: CMakeLists.txt  board.cc  board.h  board_ut.cc
boards_assembler/: boards_assembler.cc  boards_assembler.h
evaluator/: CMakeLists.txt  evaluator.cc  evaluator.h  evaluator_ut.cc
fairy_pieces/: CMakeLists.txt  dummy.cc  dummy.h
figure/: CMakeLists.txt  board_figure.cc  board_figure.h  figure.h
gameplay/atomic/depth4/: README.md  logs.txt
gameplay/atomic/depth5/: README.md  logs.txt
gameplay/berolina/: README.md  logs.txt
gameplay/capablanca/: README.md  logs.txt
gameplay/charge_of_the_light_brigade/: README.md  logs.txt
gameplay/grasshopper/: README.md  logs.txt
gameplay/horde/: README.md  logs.txt
gameplay/knightmate/: README.md  logs.txt
gameplay/mad_king/: README.md  logs.txt
gameplay/peasants_revolt/depth4/: README.md  logs.txt
gameplay/peasants_revolt/depth5/: README.md  logs.txt
gameplay/peasants_revolt/depth6/: README.md  logs.txt
gameplay/really_big/: README.md  logs.txt
gameplay/stratomic/: README.md  logs.txt
gameplay/tutti_frutti/: README.md  logs.txt
gameplay/vanilla/: README.md  logs.txt
gameplay/weak/: README.md  logs.txt
gameplay/wildebeest/: README.md  logs.txt
graphics/: CMakeLists.txt
minimax/: CMakeLists.txt  minimax.cc  minimax.h  minimax_ut.cc
move_generator/: CMakeLists.txt  move_generator.cc  move_generator.h  move_generator_ut.cc
piece/: CMakeLists.txt  board_piece.cc  board_piece.h  board_piece_ut.cc  piece.h  piece_or_empty.h  piece_registry.cc  piece_registry.h
pretty_printer/: CMakeLists.txt  pretty_printer.cc  pretty_printer.h  pretty_printer_ut.cc
src/: CMakeLists.txt  fairy_chess.cc
src/bit_storage/: CMakeLists.txt  bit_storage.cc  bit_storage_ut.cc
src/board/: CMakeLists.txt  board.cc  board.h  board_ut.cc
src/boards_assembler/: CMakeLists.txt  boards_assembler.cc  boards_assembler.h  boards_assembler_ut.cc
src/constants/: CMakeLists.txt  constants.h
src/evaluator/: evaluator.cc  evaluator.h  evaluator_ut.cc
src/fairy_pieces/: CMakeLists.txt  amazon_piece.cc  amazon_piece.h  amazon_piece_ut.cc  anti_pawn_piece.cc  anti_pawn_piece.h  anti_pawn_piece_ut.cc  atomic_pieces.cc  atomic_pieces.h  atomic_pieces_ut.cc  champion_piece.cc  champion_piece.h  champion_piece_ut.cc  dragon_piece.cc  dragon_piece.h  dragon_piece_ut.cc  dummy_piece.cc  dummy_piece.h  empress_piece.cc  empress_piece.h  empress_piece_ut.cc  fool_piece.cc  fool_piece.h  fool_piece_ut.cc  grasshopper_piece.cc  grasshopper_piece.h  grasshopper_piece_ut.cc  knight_king_piece.cc  knight_king_piece.h  knight_king_piece_ut.cc  mann_piece.cc  mann_piece.h  mann_piece_ut.cc  nuclear_missile_piece.cc  nuclear_missile_piece.h  nuclear_missile_piece_ut.cc  princess_piece.cc  princess_piece.h  princess_piece_ut.cc  really_big_board_pawn_piece.cc  (+10 more)
src/graphics/: graphics.cc  graphics.h
src/minimax/: minimax.cc  minimax.h  minimax_ut.cc
src/move_generator/: CMakeLists.txt  move_generator.cc  move_generator.h
src/piece/: CMakeLists.txt  board_piece.cc  board_piece.h  board_piece_ut.cc  piece.cc  piece.h  piece_or_empty.cc  piece_registry.h
src/pretty_printer/: pretty_printer.cc
src/testing/: CMakeLists.txt  testing.cc  testing.h
src/vanilla_pieces/: CMakeLists.txt  bishop_piece.cc  bishop_piece.h  bishop_piece_ut.cc  king_piece.cc  king_piece.h  knight_piece.cc  knight_piece.h  knight_piece_ut.cc  pawn_piece.cc  pawn_piece.h  pawn_piece_ut.cc  queen_piece.cc  queen_piece.h  queen_piece_ut.cc  rook_piece.cc  rook_piece.h  rook_piece_ut.cc
testing/: CMakeLists.txt  testing.cc
vanilla_figures/: CMakeLists.txt  pawn.h
vanilla_pieces/: CMakeLists.txt  bishop_piece.cc  bishop_piece.h  bishop_piece_ut.cc  king_piece.cc  king_piece.h  king_piece_ut.cc  knight.cc  knight_piece.cc  knight_piece.h  knight_piece_ut.cc  knight_ut.cc  pawn.cc  pawn.h  pawn_piece.cc  pawn_piece.h  pawn_piece_ut.cc  pawn_ut.cc  queen_piece.cc  queen_piece.h  queen_piece_ut.cc  rook_piece.cc  rook_piece.h  rook_piece_ut.cc
zobrist_hashing/: CMakeLists.txt  zobrist_hashing.cc  zobrist_hashing.h
